--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ coveralls = {version = "^3.0.1", optional = true}
 [tool.poetry.extras]
 ci = ["coveralls"]
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 pytest = "^6.2.2"
 pytest-cov = "^2.11.1"
 pytest-asyncio = "^0.14.0"
