--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ packages = [
 python = "^3.7"
 transitions = "^0.8.0"
 websockets = ">=9.0,<11.0"
+importlib-metadata = { version = "^6.5.0", python = "<3.8" }
 passlib = "^1.7.0"
 docopt = "^0.6.0"
 PyYAML = ">=5.4.0,<7.0"
